--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homework 11</title>
+  <link rel="stylesheet" href="/src/css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
   <form class="search-form" id="search-form">
-    <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-    <button type="submit">Search</button>
+    <input type="text" id="search-input" name="searchQuery" class="search-input" autocomplete="off"
+      placeholder="Search images..." />
+    <button class="submit-btn" id="submit-btn" type="submit">Search</button>
   </form>
+  <div class="gallery row row-cols-3" id="gallery">
 
+  </div>
   <script src="index.js" type="module"></script>
 </body>
 
