--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,10 @@
       placeholder="Search images..." />
     <button class="submit-btn" id="submit-btn" type="submit">Search</button>
   </form>
-  <div class="gallery row row-cols-3" id="gallery">
-
+  <div class="gallery row row-cols-4" id="gallery">
   </div>
+  <button class="load_more invisible" id="load_more" type="button">Load more</button>
+
   <script src="index.js" type="module"></script>
 </body>
 
