--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homework 11</title>
   <link rel="stylesheet" href="/src/css/styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
@@ -17,7 +15,7 @@
       placeholder="Search images..." />
     <button class="submit-btn" id="submit-btn" type="submit">Search</button>
   </form>
-  <div class="gallery row row-cols-4" id="gallery">
+  <div class="gallery" id="gallery">
   </div>
   <button class="load_more invisible" id="load_more" type="button">Load more</button>
 
